/*
 * SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package persistency;

// KVS value types - similar to persistency/rust_kvs KvsValue enum
message KvsValue {
  oneof value {
    int32 i32_value = 1;
    uint32 u32_value = 2;
    int64 i64_value = 3;
    uint64 u64_value = 4;
    double f64_value = 5;
    bool boolean_value = 6;
    string string_value = 7;
    NullValue null_value = 8;
    KvsArray array_value = 9;
    KvsObject object_value = 10;
  }
}

message NullValue {}

message KvsArray {
  repeated KvsValue values = 1;
}

message KvsObject {
  map<string, KvsValue> values = 1;
}

// Request/Response messages for KVS operations
message SetValueRequest {
  string key = 1;
  KvsValue value = 2;
}

message SetValueResponse {
  bool success = 1;
  string error_message = 2;
}

message GetValueRequest {
  string key = 1;
}

message GetValueResponse {
  bool success = 1;
  KvsValue value = 2;
  string error_message = 3;
}

message RemoveKeyRequest {
  string key = 1;
}

message RemoveKeyResponse {
  bool success = 1;
  string error_message = 2;
}

message GetAllKeysRequest {}

message GetAllKeysResponse {
  bool success = 1;
  repeated string keys = 2;
  string error_message = 3;
}

message KeyExistsRequest {
  string key = 1;
}

message KeyExistsResponse {
  bool success = 1;
  bool exists = 2;
  string error_message = 3;
}

message GetAllWithPrefixRequest {
  string prefix = 1;
}

message GetAllWithPrefixResponse {
  bool success = 1;
  map<string, KvsValue> key_values = 2;
  string error_message = 3;
}

message ResetRequest {}

message ResetResponse {
  bool success = 1;
  string error_message = 2;
}

message FlushRequest {}

message FlushResponse {
  bool success = 1;
  string error_message = 2;
}

// Persistency service definition
service PersistencyService {
  // Basic KVS operations
  rpc SetValue(SetValueRequest) returns (SetValueResponse);
  rpc GetValue(GetValueRequest) returns (GetValueResponse);
  rpc RemoveKey(RemoveKeyRequest) returns (RemoveKeyResponse);
  rpc GetAllKeys(GetAllKeysRequest) returns (GetAllKeysResponse);
  rpc KeyExists(KeyExistsRequest) returns (KeyExistsResponse);
  
  // ETCD-compatible operations
  rpc GetAllWithPrefix(GetAllWithPrefixRequest) returns (GetAllWithPrefixResponse);
  
  // System operations
  rpc Reset(ResetRequest) returns (ResetResponse);
  rpc Flush(FlushRequest) returns (FlushResponse);
}